--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -132,10 +132,12 @@
 <script type="text/javascript" src='{% static "app/shared/mapSupportService.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/coverageCalculatorService.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/chartPDFExportService.js" %}'></script>
+<script type="text/javascript" src='{% static "app/shared/chartSupportService.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/mainController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/common/helpers.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/coverage/coverageController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/coverage/annualCoverageController.js" %}'></script>
+<script type="text/javascript" src='{% static "app/components/stock/stockUptakeController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/fridge/fridgeController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/stock/stockController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/unepi/UnepiController.js" %}'></script>
