--- a/dashboard/static/css/additional-styles.css
+++ b/dashboard/static/css/additional-styles.css
@@ -192,7 +192,7 @@ h1, h2, h3, h4, h5, h6, th {
     width: 450px;
 }
 
-#annualCoverageChart svg {
+#annualCoverageChart svg, .center-chart svg {
     margin: auto;
 }
 
