--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -138,6 +138,7 @@
 <script type="text/javascript" src='{% static "app/components/coverage/coverageController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/coverage/annualCoverageController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/stock/stockUptakeController.js" %}'></script>
+<script type="text/javascript" src='{% static "app/components/stock/stockoutTrendController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/fridge/fridgeController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/stock/stockController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/unepi/UnepiController.js" %}'></script>
