Setup the module to add finance data, and also setup graphs to visualize it.

--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href='{% static "vendor/multiple-select/multiple-select.css"%}'>
     <link rel="stylesheet" href='{% static "vendor/nvd3/puild/nv.d3.css"%}'>
     <link rel="stylesheet" href='{% static "vendor/angular-datatables/dist/css/angular-datatables.min.css"%}'>
+    <link rel="stylesheet" type="text/css" href='{% static "vendor/angular-ui-grid/ui-grid.min.css"%}'>
     <link rel="stylesheet" href='{% static "vendor/leaflet/dist/leaflet.css"%}' />
     <link rel="stylesheet" href='{% static "css/tooltipstyle.css"%}' />
     <link rel="stylesheet" href='{% static "css/additional-styles.css"%}' />
@@ -117,6 +118,7 @@
 <script type="text/javascript" src='{% static "vendor/angular-chart/angular-chart.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/ng-table/dist/ng-table.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/angular-datatables/dist/angular-datatables.min.js"%}'></script>
+<script type="text/javascript" src='{% static "vendor/angular-ui-grid/ui-grid.min.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/html2canvas/build/html2canvas.min.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/jspdf/dist/jspdf.min.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/d3-legend/d3-legend.min.js"%}'></script>
