--- a/dashboard/static/app/components/fridge/capacity.html
+++ b/dashboard/static/app/components/fridge/capacity.html
@@ -59,7 +59,7 @@
 
     <div class="row">
         <div class="col-md-12 text-center">
-            <div class="test-area clearfix ">
+            <div class="test-area clearfix test-area-fix">
 
                 <div class="quality_test">
                     <span class="quality_test__metric"> {{ child.utsurp | number:0}}% </span>
