--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -26,6 +26,10 @@
     <link rel="stylesheet" href='{% static "css/tooltipstyle.css"%}' />
     <link rel="stylesheet" href='{% static "css/additional-styles.css"%}' />
 
+    <script type="text/javascript" src='{% static "vendor/jquery/jquery.min.js" %}'></script>
+    <!--<link rel="stylesheet" type="text/css" href='{% static "vendor/datatables/media/css/jquery.dataTables.min.css"%}'>-->
+
+
     <style>
         #tooltip {
             position: absolute;
