Placed Finance Module behind Authentication.
Improved the style of Unepi page.

--- a/dashboard/static/app/components/finance/main.html
+++ b/dashboard/static/app/components/finance/main.html
@@ -10,14 +10,14 @@
         <div class="col-md-12 main-filters">
             <div class="filter-field">
                 Start Year
-                <select name="name" class="form-control filter criteria-select" ng-model="shell.startYear"
+                <select name="name" class="form-control filter criteria-select" ng-model="shell.financeStartYear"
                     ng-options="year for year in financeYears">
                 </select>
             </div>
             <div class="spacer"></div>
             <div class="filter-field">
                 End Year
-                <select name="name" class="form-control filter criteria-select" ng-model="shell.endYear"
+                <select name="name" class="form-control filter criteria-select" ng-model="shell.financeEndYear"
                     ng-options="year for year in financeYears">
                 </select>
             </div>
