--- a/dashboard/static/app/components/unepi/download.html
+++ b/dashboard/static/app/components/unepi/download.html
@@ -41,15 +41,15 @@
                     <tr ng-repeat="row in $data">
                         <td title="'Antigen'">{{row.vaccine }}</td>
                         <td title="'Planned monthly immunisations'" class="text-center" >{{row.planned_consumption }}</td>
-                        <td title="'Monthly Coverage'" class="text-center" ng-if="row.coverage_rate >= 90" ng-style="{'background-color':'green'} ">{{row.coverage_rate | number:0 }}%</td>
+                        <td title="'Monthly Coverage'" class="text-center green-field" ng-if="row.coverage_rate >= 90">{{row.coverage_rate | number:0 }}%</td>
                         <td title="'Monthly Coverage'" class="text-center" ng-if="row.coverage_rate >= 50 && row.coverage_rate <=89" ng-style="{'background-color':'yellow'}">{{row.coverage_rate | number:0 }}%</td>
                         <!-- <td title="'Monthly Coverage'" class="text-center" ng-if="row.coverage_rate >= 70 && row.coverage_rate <= 90 " ng-style="{'background-color':'#C3FDB8'}">{{row.coverage_rate | number:0 }}%</td> -->
-                        <td title="'Monthly Coverage'" class="text-center" ng-if="row.coverage_rate < 50" ng-style="{'background-color':'red'}">{{row.coverage_rate | number:0 }}%</td>
+                        <td title="'Monthly Coverage'" class="text-center red-field" ng-if="row.coverage_rate < 50">{{row.coverage_rate | number:0 }}%</td>
 
-                        <td title="'Annulised Coverage'" class="text-center" ng-if="row.avoc >= 90" ng-style="{'background-color':'green'}">{{row.avoc | number:0 }}%</td>
+                        <td title="'Annulised Coverage'" class="text-center green-field" ng-if="row.avoc >= 90">{{row.avoc | number:0 }}%</td>
                         <td title="'Annulised Coverage'" class="text-center" ng-if="row.avoc >= 50 && row.avoc <=89" ng-style="{'background-color':'yellow'}">{{row.avoc | number:0 }}%</td>
                         <!-- <td title="'Annulised Coverage'" class="text-center" ng-if="row.avoc >= 70 && row.avoc <= 90 " ng-style="{'background-color':'#C3FDB8'}">{{row.avoc | number:0 }}%</td> -->
-                        <td title="'Annulised Coverage'" class="text-center" ng-if="row.avoc < 50" ng-style="{'background-color':'red'}">{{row.avoc | number:0 }}%</td>
+                        <td title="'Annulised Coverage'" class="text-center red-field" ng-if="row.avoc < 50">{{row.avoc | number:0 }}%</td>
                     </tr>
                 </tbody>
             </table>
@@ -59,11 +59,11 @@
         <div class="col-md-6">
             <div class="col-md-6">
                 <table class="row-border hover table table-condensed table-striped">
-                    <td ng-if="child.dropout_Penta >= 0 && child.dropout_Penta <= 10" ng-style="{'background-color':'green'}">
+                    <td ng-if="child.dropout_Penta >= 0 && child.dropout_Penta <= 10" class="green-field">
                         <span class="quality_test__description">{{"Drop Out Rate DPT1-3"}}</span>
                         <span class="quality_test__metric"> {{child.dropout_Penta | number:0 }}% </span>
                     </td>
-                    <td ng-if="child.dropout_Penta <0 || child.dropout_Penta >10" ng-style="{'background-color':'red'}">
+                    <td ng-if="child.dropout_Penta <0 || child.dropout_Penta >10" class="red-field">
                         <span class="quality_test__description">{{"Drop Out Rate DPT1-3"}}</span>
                         <span class="quality_test__metric"> {{child.dropout_Penta | number:0 }}% </span>
                     </td>
@@ -89,7 +89,7 @@
             <div>
                 <table class="row-border hover table table-condensed table-striped">
                     <tr>
-                    <td ng-if="child.category == 1" ng-style="{'background-color':'green'}">
+                    <td ng-if="child.category == 1" class="green-field">
                         <span class="quality_test__description">{{"RED CATEGORY" }}</span>
                         <span class="quality_test__metric"> CAT{{child.category}} </span>
                     </td>
@@ -101,7 +101,7 @@
                         <span class="quality_test__description">{{"RED CATEGORY" }}</span>
                         <span class="quality_test__metric"> CAT{{child.category}} </span>
                     </td>
-                    <td ng-if="child.category == 4" ng-style="{'background-color':'red'}">
+                    <td ng-if="child.category == 4" class="red-field">
                         <span class="quality_test__description">{{"RED CATEGORY" }}</span>
                         <span class="quality_test__metric"> CAT{{child.category}} </span>
                     </td>
@@ -125,7 +125,7 @@
                 <thead>
                     <tr>
                         <th>Antigen</th>
-                        <th>Months Of Stock</th>
+                        <th>Months of Stock @DVS</th>
                         <th>Refill Rate By NMS</th>
                         <th>Vaccines uptake<br>(Utilized)</th>
                     </tr>
@@ -133,21 +133,21 @@
                 <tbody>
                     <tr ng-repeat="row in $data">
                         <td title="'ANTIGEN'">{{ row.vaccine }}</td>
-                        <td title="'Months Of Stock'" class="text-center" ng-if="row.Months_stock >= 7" ng-style="{'background-color':'green'} ">{{row.Months_stock }}</td>
+                        <td title="'Months Of Stock'" class="text-center green-field" ng-if="row.Months_stock >= 7">{{row.Months_stock }}</td>
                         <td title="'Months Of Stock'" class="text-center" ng-if="row.Months_stock >= 3 && row.Months_stock <7" ng-style="{'background-color':'yellow'}">{{row.Months_stock}}</td>
                         <td title="'Months Of Stock'" class="text-center" ng-if="row.Months_stock >= 1 && row.Months_stock <3 " ng-style="{'background-color':'yellow'}">{{row.Months_stock}}</td>
-                            <td title="'Months Of Stock'" class="text-center" ng-if="row.Months_stock == 0" ng-style="{'background-color':'red'}">{{row.Months_stock}}</td>
+                            <td title="'Months Of Stock'" class="text-center red-field" ng-if="row.Months_stock == 0">{{row.Months_stock}}</td>
 
 
-                            <td title="'Refill Rate By NMS'" class="text-center" ng-if="row.Refill_rate >= 90" ng-style="{'background-color':'green'} ">{{row.Refill_rate | number:0 }}%</td>
+                            <td title="'Refill Rate By NMS'" class="text-center green-field" ng-if="row.Refill_rate >= 90">{{row.Refill_rate | number:0 }}%</td>
                             <td title="'Refill Rate By NMS'" class="text-center" ng-if="row.Refill_rate >= 50 && row.Refill_rate <=70" ng-style="{'background-color':'yellow'}">{{row.Refill_rate | number:0 }}%</td>
                             <td title="'Refill Rate By NMS'" class="text-center" ng-if="row.Refill_rate >= 70 && row.Refill_rate <= 90 " ng-style="{'background-color':'yellow'}">{{row.Refill_rate | number:0 }}%</td>
-                            <td title="'Refill Rate By NMS'" class="text-center" ng-if="row.Refill_rate <= 50" ng-style="{'background-color':'red'}">{{row.Refill_rate | number:0 }}%</td>
+                            <td title="'Refill Rate By NMS'" class="text-center red-field" ng-if="row.Refill_rate <= 50">{{row.Refill_rate | number:0 }}%</td>
 
-                            <td title="'Vaccine Utilised'" class="text-center" ng-if="row.uptake_rate >= 90" ng-style="{'background-color':'green'} ">{{row.uptake_rate | number:0 }}%</td>
+                            <td title="'Vaccine Utilised'" class="text-center green-field" ng-if="row.uptake_rate >= 90">{{row.uptake_rate | number:0 }}%</td>
                             <td title="'Vaccine Utilised'" class="text-center" ng-if="row.uptake_rate >= 50 && row.uptake_rate <=70" ng-style="{'background-color':'yellow'}">{{row.uptake_rate | number:0 }}%</td>
                             <td title="'Vaccine Utilised'" class="text-center" ng-if="row.uptake_rate >= 70 && row.uptake_rate <= 90 " ng-style="{'background-color':'yellow'}">{{row.uptake_rate | number:0 }}%</td>
-                            <td title="'Vaccine Utilised'" class="text-center" ng-if="row.uptake_rate <= 50" ng-style="{'background-color':'red'}">{{row.uptake_rate | number:0 }}%</td>
+                            <td title="'Vaccine Utilised'" class="text-center red-field" ng-if="row.uptake_rate <= 50">{{row.uptake_rate | number:0 }}%</td>
                         </tr>
                     </tbody>
                 </table>
