--- a/dashboard/static/app/components/stock/stockouttrend.html
+++ b/dashboard/static/app/components/stock/stockouttrend.html
@@ -5,7 +5,7 @@
     <div id="pdfReport">
         <div class="text-center">
             <br><br>
-            <h4 style="width: 100%;">{{child.district }} Stock Out Trend of {{child.vaccine }}</h4>
+            <h4 style="width: 100%;">{{child.district }} stock levels vs NMS supply of  {{child.vaccine }}</h4>
             <br><br>
             <nvd3
                 options="vm.graphOptions"
