--- a/dashboard/static/app/components/stock/stockouttrend.html
+++ b/dashboard/static/app/components/stock/stockouttrend.html
@@ -2,7 +2,7 @@
     <button class="pull-right" ng-click="vm.exportPDF('stock-out-trend-report.pdf')">Download Pdf</button>
     <div style="clear:both;"></div>
 
-    <div id="pdfReport">
+    <div id="pdfReport" ng-class="vm.printView ? 'unepiPrint' : ''">
         <div class="text-center">
             <br><br>
             <h4 style="width: 100%;">{{child.district }} stock levels vs NMS supply of  {{child.vaccine }}</h4>
@@ -15,6 +15,12 @@
                 >
             </nvd3>
             
+        </div>
+
+        <div style="clear:both;"></div>
+        
+        <div class="text-center unepi-print-footer" ng-show="vm.printView">
+            <i>This report has been extracted from the Ministry of health UNEPI dashboard.</i>
         </div>
     </div>
     <!-- <div class="col-md-5">
