--- a/dashboard/static/css/additional-styles.css
+++ b/dashboard/static/css/additional-styles.css
@@ -193,7 +193,7 @@ h1, h2, h3, h4, h5, h6, th {
 
 #chart-container h4, #map-container h4 {
     line-height:20px;
-    width: 450px;
+    /* width: 450px; */
 }
 
 #annualCoverageChart svg, .center-chart svg {
