--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -128,6 +128,7 @@
 <script type="text/javascript" src='{% static "vendor/d3-legend/d3-legend.min.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/rgbcolor/index.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/canvg/dist/canvg.min.js"%}'></script>
+<script type="text/javascript" src='{% static "vendor/humanize-plus/dist/humanize.min.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/leaflet/dist/leaflet.js" %}'></script>
 <script type="text/javascript" src='{% static "vendor/angular-leaflet-directive/dist/angular-leaflet-directive.js" %}'></script>
 <script type="text/javascript" src='{% static "vendor/leaflet/dist/leaflet.shpfile.js" %}'></script>
