--- a/dashboard/static/app/components/finance/allocations.html
+++ b/dashboard/static/app/components/finance/allocations.html
@@ -1,7 +1,14 @@
 <div ng-controller="MainFinanceController as vm">
+    <div class="pull-left">
+        <input type="radio" name="currency" value="USD" ng-model="vm.graphCurrency"/> USD &nbsp;
+        <input type="radio" name="currency" value="UGX" ng-model="vm.graphCurrency" /> UGX
+        <br>
+        <small><input type="checkbox" ng-model="vm.compactAmounts"/> Compact Amounts</small>
+    </div>
+    
     <button class="pull-right" ng-click="vm.exportPDF('finance-allocations-report.pdf')">Download Pdf</button>
     <div style="clear:both;"></div>
-
+    
     <div class="row toggle-row" >
         <span class='reg_toggle'>
             <span class=' toggle-option'
@@ -14,6 +21,7 @@
         </span>
     </div>
 
+    
 
     <div id="pdfReport" ng-class="vm.printView ? 'unepiPrint' : ''">
         <div class="text-center">
