Added orders bar to stock trends tab.
Changed text color for pie chart on stock levels tab.

--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -61,7 +61,7 @@
             <div class="quality_test text-center" ui-sref-active="quality_test_active">
                 <a ui-sref="stock.stockonhand" ui-sref-opts="{reload: true}">
                     <!-- <span class="quality_test__metric"> {{ child.stockedout | number:0 }}% </span> -->
-                    <span class="quality_test__description easytooltip">{{"Districts Stock trends" | uppercase}}
+                    <span class="quality_test__description easytooltip">{{"Districts Stock Levels" | uppercase}}
                     <span class="easytooltiptext" ><b>Percentage of Districts reporting zero balance</b></span>
                     </span>
                 </a>
@@ -99,7 +99,7 @@
             <div class="quality_test text-center" ui-sref-active="quality_test_active">
                 <a ui-sref="stock.stockouttrend" ui-sref-opts="{reload: true}">
                     <!-- <span class="quality_test__metric"></span> -->
-                    <span class="quality_test__description easytooltip">DISTRICT STOCK LEVELS
+                    <span class="quality_test__description easytooltip">DISTRICT STOCK TRENDS
                     <span class="easytooltiptext" ><b>Doses consumed /Available Doses </b>expressed as a percentage</span>
                     </span>
                 </a>
