--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -6,7 +6,7 @@
     <br>
 
     <div class="col-md-5">
-        <div class="page_graph">
+        <div id="stockLevelsPieChart" class="page_graph">
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
